# hipacc

./: CMakeLists.txt  LICENSE  README.md  _clang-format
apps/: CMakeLists.txt  readme.txt
apps/6_Multiresolution_Filters/Laplacian_Pyramid_Encoding/src/: main.cpp
apps/7_FFT/: Makefile
apps/7_FFT/DFT_DCT/src/: main.cpp
apps/7_FFT/Gaussian_Blur/src/: main.cpp
apps/7_FFT/Halftone/src/: main.cpp
apps/7_FFT/Image_Manipulation/: dct_helper.hpp
apps/7_FFT/Image_Manipulation/src/: main.cpp
cmake/modules/: FindFFTW.cmake
compiler/: hipacc.cpp
dsl/: fft.hpp  hipacc.hpp  kernel.hpp
include/hipacc/AST/: ASTFuse.h  ASTTranslate.h
include/hipacc/Analysis/: HostDataDeps.h
include/hipacc/Config/: CompilerOptions.h
include/hipacc/DSL/: ClassRepresentation.h
include/hipacc/Device/: TargetDescription.h  TargetDevices.h
include/hipacc/Rewrite/: CreateHostStrings.h
lib/AST/: ASTFuse.cpp  ASTTranslate.cpp  BorderHandling.cpp  MemoryAccess.cpp
lib/Analysis/: HostDataDeps.cpp
lib/DSL/: ClassRepresentation.cpp
lib/Rewrite/: CreateHostStrings.cpp  Rewrite.cpp
runtime/: hipacc_cpu_fftw.hpp  hipacc_cu.hpp.cmake  hipacc_cu.tpp  hipacc_cu_cufft.hpp  hipacc_cu_standalone.hpp.cmake  hipacc_fft_helper.hpp
samples-public/: CMakeLists.txt.in
samples-public/6_Test/Kernel_Fusion_3P2P/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_P2P/: CMakeLists.txt
samples-public/6_Test/Kernel_Fusion_PP2P/: CMakeLists.txt
samples-public/common/config/: cuda-fusedppt.conf  cuda-fusedppt16.conf  cuda-fusedppt2.conf  cuda-fusedppt32.conf  cuda-fusedppt8.conf  (+4 more)
(+17 files in other folders)
